syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc.service;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "google/protobuf/type.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

service BookService {
  rpc findBookList(google.protobuf.Empty) returns (BookList) {};
  rpc create(Book) returns (Book) {};
  rpc delete(google.protobuf.Int64Value) returns (google.protobuf.Empty) {};
  rpc search(Search) returns (BookList) {};
  rpc searchAll(google.protobuf.Empty) returns (BookList) {};
}

message BookList {
  repeated Book bookList = 1;
}

message Book {
  int64 id = 1;
  string bookName = 2;
  string author = 3;
  string publisher = 4;
}

message Search {
  string bookName = 1;
  string author = 2;
}
